--- a/src/task-06.html
+++ b/src/task-06.html
@@ -19,10 +19,13 @@
       }
 
       #validation-input.valid {
+        border: 2px solid;
         border-color: #4caf50;
       }
 
       #validation-input.invalid {
+        border: 2px solid;
+
         border-color: #f44336;
       }
     </style>
